--- a/api-template/css/style.css
+++ b/api-template/css/style.css
@@ -21,6 +21,21 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: #121212;
+  color: #ffffff;
+}
+
+h2,
+span {
+  font-size: 2rem;
+}
+
+section {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
 }
 
 /******************************************
